--- a/css/style.css
+++ b/css/style.css
@@ -1,98 +1,131 @@
-html
-{
-	height: 100%;
-	width: 100%;
-	min-height: 50%;
-	min-width: 50%
-		font-family: 'Raleway', sans-serif;
-}
-
-
 body
 {
 	width:100%;
-	min-width: 50%;
-	font-family: 'Raleway', sans-serif;
 	height: 100%;
+	font-family: 'Raleway', sans-serif;
 	font-weight: 100;
 
 }
 
-#layout 
+@media (max-width: 640px){
+	#wholelayout {
+		height:auto;
+	}
+
+	h1{
+		font-size:24px;
+	}
+#navbar
 {
-	
+	display:none;
+
+
+}
+.block3, .block4, .block5, .block6, .block7, .block8
+{
+	display: none;
+}
+}
+
+
+#wholelayout
+{
 	width:90%;
+	height: 100%;
+	margin: 0 auto;
+	position: relative;
+	background-repeat: no-repeat;
 	background-image: url('../Images/paddyfield.png'); background-repeat:no-repeat;
+}
+
+#headerover
+{
 	margin:0 auto;
 	text-align:center;
-	padding: 5px;
-	height:100%;
-	border: 1px solid white;
+	width:100%;
+	height:220px;
+	margin-top: 30px;
+	padding: 20px;
+	display: block;
 }
 
-.fontawesome
-{
-	font-weight: 100;
-	margin:0 auto;
-	padding: 5px;
-	text-shadow: 1px 1px 1px #000;
-	width: 700px;
-	text-align: center;
-}
 
 h1
 {
-	font-size: 80px;
+	font-size: 60px;
+	font-weight: 100;
+	margin:0 auto;
+	text-shadow: 1px 1px 1px #000;
+	text-align: center;
+	width: 500px;
+	opacity:1;
 }
 
-p
+.p2
 {
-font-size: 30px;
-width: 500px;
+font-size: 20px;
 margin:0 auto;
+width:400px;
+margin-top: 30px;
+
 }
 
-.p1
+#blocks
 {
-	text-align: center;
-	border: 1px solid black;
-	border-radius:2px;
-	width:300px;
+	width: 100%;
+}
+
+.block1, .block2, .block3, .block4, .block5, .block6, .block7, .block8
+{
+	border-radius:100%;
 	background-color:#F6CB51;
-	opacity: 0.5;
+	opacity: 0.8;
 	padding: 4px;
-	font-weight: 200;
-	position: absolute;
-	right:75px;
-	margin-top: 20px;
-	font-size: 15px;
+	margin-left: 90px;
+	margin-top:10px;
+	margin-bottom: 10px;
+	text-align: center;
+	width:250px;
+	height:250px;
+	overflow: hidden;
+	display: inline-block;
 }
 
-#latestnews
+
+.stylep
 {
-	position: absolute;
+	font-weight: 200;
+	font-size: 15px;
+margin:0 auto;
+	float left;
+}
+
+#logo
+{
 	padding: 4px;
-	top:30px;
-	right: 75px;
-	width: 300px;
-	height: 200px;
+	width:150px;
+	height:150px;
 	text-align: center;
-	float: right;
+	float: left;
 	border: 1px solid black;
 	font-weight: 100;
+	margin-left: 10px;
+	margin-top:-220px;
 }
 
 .navbar
 {
-	position: absolute;
+float:right;
 	padding: 4px;
-	top: 50px;
-	left:90px;
 	width: 200px;
 	text-align: center;
 	opacity: 0.8;
-	font-weight: 100;
+	font-weight: 200;
+	margin-top:-220px;
+	margin-right: 20px;
 }
+
+
 h2
 {
 	font-weight: 200;
@@ -106,10 +139,12 @@ h2
 
 #footer 
 {
-	position:absolute;
-	bottom: 10px;
-	background-color: #F6CB51;
-	opacity: 0.8;
+	background-color:#F6CB51;
+	opacity: 0.7;
 	width:90%;
+	height:150px;
+	text-align: center;
+	margin:0 auto;
+	padding-top: 40px;
+	border: 10px solid white;
 }
-
