--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,8 @@ body
 	height: 100%;
 	font-family: 'Raleway', sans-serif;
 	font-weight: 100;
+	background-size: cover;
+		background-image: url('../Images/paddyfield.png'); background-repeat:no-repeat;
 
 }
 
@@ -34,8 +36,7 @@ body
 	height: 100%;
 	margin: 0 auto;
 	position: relative;
-	background-repeat: no-repeat;
-	background-image: url('../Images/paddyfield.png'); background-repeat:no-repeat;
+
 }
 
 #headerover
